AUI-1251 Fix FormBuilder edit buttons alignment on Bootstrap 3
Adds min height to serve as a clearance for making space for the form builder toolbar action buttons.
Update toolbar class name to use the css prefix 'btn'.

--- a/src/aui-form-builder/assets/aui-form-builder-field-base-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-field-base-core.css
@@ -3,7 +3,7 @@
     float: left;
     margin-right: 5px;
 }
-.form-builder-field .toolbar {
+.form-builder-field .btn-toolbar {
     position: absolute;
     right: 10px;
     top: 10px;
